# pdf_to_course-

./: .dockerignore  .gitignore  README.md  SPEC_KIT_PROMPT_TEMPLATE.md
.github/agents/: copilot-instructions.md  speckit.taskstoissues.agent.md
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml
backend/src/api/: access_guards.py  app.py  projects_create.py  projects_exports_create.py  projects_exports_download.py  projects_language_confirmation_patch.py  projects_modules_list.py  projects_modules_patch.py  projects_process.py
backend/src/models/: base.py  content_models.py  db.py  export_models.py  model_profile_models.py  project_models.py  question_models.py
backend/src/pipelines/: summarization_pipeline.py
backend/src/pipelines/input_adapters/: base_adapter.py  pdf_adapter.py
backend/src/services/: chapter_segmentation_service.py  export_package_service.py  export_render_service.py  in_memory_store.py  job_state_service.py  language_confirmation_service.py  model_profile_rollback_service.py  model_profile_service.py  module_edit_validation_service.py  ownership_guard_service.py  pdf_extraction_service.py  pdf_validation_service.py  quality_score_service.py  question_generation_service.py  storage_service.py
backend/src/workers/: artifact_cleanup_worker.py  celery_app.py  process_project_worker.py
docs/operations/: export-download.md  model-profile-compatibility.md  pdf-input-policy.md
frontend/: index.html  package-lock.json  package.json
scripts/: validate_performance_targets.ps1  validate_quickstart.ps1
(+23 files in other folders)
